workloads/bulwark/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bulwark
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: mail-ts-2143-https
  hostnames:
    - mail.ts.2143.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: lan-only
      backendRefs:
        - name: bulwark
          port: 3000
